# sfml-util

./: CMakeLists.txt  README.md
cmake/: FindSFML.cmake
src/: CMakeLists.txt
src/lib/core/: Core.cpp  Core.h
src/lib/core/assets/: Animation.cpp  Animation.h  AssetParser.h  Spritesheet.cpp  Spritesheet.h
src/lib/core/game/: Game.cpp  Game.h
src/lib/core/game/screen/: Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h
src/lib/core/util/: Locator.cpp  Locator.h  StringSplit.h
